crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__the_fourth_doctor_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [],
  "statics": [
    {
      "mode": "MayLookAtTopOfLibrary",
      "affected": {
        "type": "Typed",
        "type_filters": [],
        "controller": "You",
        "properties": []
      },
      "modifications": [],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "You may look at the top card of your library any time."
    },
    {
      "mode": {
        "TopOfLibraryCastPermission": {
          "play_mode": "Play",
          "frequency": "OncePerTurn",
          "alt_cost": null,
          "when_you_do": {
            "kind": "Spell",
            "effect": {
              "type": "Token",
              "name": "Food",
              "power": {
                "type": "Fixed",
                "value": 0
              },
              "toughness": {
                "type": "Fixed",
                "value": 0
              },
              "types": [
                "Artifact",
                "Food"
              ],
              "colors": [],
              "keywords": [],
              "tapped": false,
              "count": {
                "type": "Fixed",
                "value": 1
              },
              "owner": {
                "type": "Controller"
              },
              "enters_attacking": false
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          }
        }
      },
      "affected": {
        "type": "Or",
        "filters": [
          {
            "type": "Typed",
            "type_filters": [
              "Land"
            ],
            "controller": null,
            "properties": [
              {
                "type": "Historic"
              }
            ]
          },
          {
            "type": "Typed",
            "type_filters": [
              "Card"
            ],
            "controller": null,
            "properties": [
              {
                "type": "Historic"
              }
            ]
          }
        ]
      },
      "modifications": [],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Would You Like A...? — Once each turn, you may play a historic land or cast a historic spell from the top of your library. When you do, create a Food token."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
